[package]
name = "client-api"
version = "0.1.0"
authors = ["ZOTTCE <zottce@gmail.com>"]
edition = "2018"

[dependencies]
winapi = { version = "0.3.8", features = ["d3d9", "libloaderapi", "winuser", "winver"] }
detour = { git = "https://github.com/darfink/detour-rs", rev = "3b6f17a" }
log = "0.4.14"
